--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
 
   <!-- Header Playlist -->
   <div class="header">
-    <img src="fotwo/pp.jpg" alt="cover" class="cover">
+    <img src="pp.jpg" alt="cover" class="cover">
     <div class="playlist-info">
       <h1>paket combo free refil minum</h1>
       <p>z riel • 10 lagu</p>
@@ -204,9 +204,9 @@
   <!-- Daftar Lagu -->
   <ul class="song-list">
 <li class="song" 
-    data-src="songs/Monolog.mp3" 
-    data-cover="fotwo/pmk.jpg">
-  <img src="fotwo/pmk.jpg">
+    data-src="Monolog.mp3" 
+    data-cover="pmk.jpg">
+  <img src="pmk.jpg">
   <div class="song-info">
     <div class="song-title">Monolog</div>
     <div class="song-artist">Pamungkas</div>
@@ -215,9 +215,9 @@
 </li>
 
     <li class="song" 
-    data-src="songs/ffy.mp3" 
-    data-cover="fotwo/19.jpg">
-  <img src="fotwo/19.jpg">
+    data-src="ffy.mp3" 
+    data-cover="19.jpg">
+  <img src="19.jpg">
   <div class="song-info">
     <div class="song-title">Fallingforyou</div>
     <div class="song-artist">The 1975</div>
@@ -226,9 +226,9 @@
 </li>
 
     <li class="song" 
-    data-src="songs/imagi.mp3" 
-    data-cover="fotwo/sm.jpg">
-  <img src="fotwo/sm.jpg">
+    data-src="imagi.mp3" 
+    data-cover="sm.jpg">
+  <img src="sm.jpg">
   <div class="song-info">
     <div class="song-title">Imagination</div>
     <div class="song-artist">Shawn Mendes</div>
@@ -237,9 +237,9 @@
 </li>
 
 <li class="song" 
-    data-src="songs/bestp.mp3" 
-    data-cover="fotwo/bp.jpg">
-  <img src="fotwo/bp.jpg">
+    data-src="bestp.mp3" 
+    data-cover="bp.jpg">
+  <img src="bp.jpg">
   <div class="song-info">
     <div class="song-title">Best Part (feat. H.E.R.)</div>
     <div class="song-artist">Daniel Caesar</div>
@@ -248,9 +248,9 @@
 </li>
 
 <li class="song" 
-    data-src="songs/ite.mp3" 
-    data-cover="fotwo/ite.jpg">
-  <img src="fotwo/ite.jpg">
+    data-src="ite.mp3" 
+    data-cover="ite.jpg">
+  <img src="ite.jpg">
   <div class="song-info">
     <div class="song-title">In The End</div>
     <div class="song-artist">Linkin Park</div>
@@ -259,9 +259,9 @@
 </li>
 
 <li class="song" 
-    data-src="songs/dip.mp3" 
-    data-cover="fotwo/dip.png">
-  <img src="fotwo/dip.png">
+    data-src="dip.mp3" 
+    data-cover="dip.png">
+  <img src="dip.png">
   <div class="song-info">
     <div class="song-title">Now I'm a Diplomat</div>
     <div class="song-artist">Reality Club</div>
@@ -270,9 +270,9 @@
 </li>
 
 <li class="song" 
-    data-src="songs/sem.mp3" 
-    data-cover="fotwo/sem.jpg">
-  <img src="fotwo/sem.jpg">
+    data-src="sem.mp3" 
+    data-cover="sem.jpg">
+  <img src="sem.jpg">
   <div class="song-info">
     <div class="song-title">Sempurna</div>
     <div class="song-artist">Andra & The Backbone</div>
@@ -281,9 +281,9 @@
 </li>
 
 <li class="song" 
-    data-src="songs/ss.mp3" 
-    data-cover="fotwo/ss.jpg">
-  <img src="fotwo/ss.jpg">
+    data-src="ss.mp3" 
+    data-cover="ss.jpg">
+  <img src="ss.jpg">
   <div class="song-info">
     <div class="song-title">Sunda Strait</div>
     <div class="song-artist">Aldi Haqq</div>
@@ -292,9 +292,9 @@
 </li>
 
 <li class="song" 
-    data-src="songs/resah.mp3" 
-    data-cover="/fotwo/resah.jpg">
-  <img src="fotwo/resah.jpg">
+    data-src="resah.mp3" 
+    data-cover="resah.jpg">
+  <img src="resah.jpg">
   <div class="song-info">
     <div class="song-title">Resah</div>
     <div class="song-artist">Payung Teduh</div>
@@ -303,9 +303,9 @@
 </li>
 
 <li class="song" 
-    data-src="songs/kno.mp3" 
-    data-cover="/fotwo/kno.jpg">
-  <img src="fotwo/kno.jpg">
+    data-src="kno.mp3" 
+    data-cover="kno.jpg">
+  <img src="kno.jpg">
   <div class="song-info">
     <div class="song-title">Kepada Noor</div>
     <div class="song-artist">Panji Sakti</div>
@@ -316,7 +316,7 @@
 
   <!-- Player -->
   <div class="player">
-    <img id="playerCover" src="fotwo/play.jpg" alt="">
+    <img id="playerCover" src="play.jpg" alt="">
     <div class="controls">
       <button id="prevBtn" title="Prev">
         <svg viewBox="0 0 24 24"><path d="M6 12l12-8v16zM4 6h2v12H4z"/></svg>
